[package]
name = "stakpool-utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "=1.7.17"
spl-stake-pool = { git = "https://github.com/solana-labs/solana-program-library.git", rev = "4b0f59e9c61554708de969b01892b90955d5fd69", features = [
  "no-entrypoint",
] }
borsh = "0.9.3"
rust_decimal = "1.22.0"
